# linalg

./: .gitignore  pyproject.toml
.github/workflows/: pylint.yml
scripts/: composition.py
src/linalg/: __init__.py
src/linalg/geometry/: __init__.py  matrix2d.py  vectors2d.py  vectors3d.py
src/linalg/scripts/: __init__.py  composition.py
src/linalg/utils/: __init__.py  guards.py
src/linalg/vectors/: __init__.py  vectors2d.py  vectors3d.py
tests/: test_matrix2d.py  test_vectors2d.py
utils/: banners.py  guards.py
vectors/: vectors2d.py  vectors3d.py
