# linalg/pyproject.toml

[build-system]
requires = ["setuptools >= 75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "linalg"
version = "0.1.0"
requires-python = ">= 3.12"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pylint>=3.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
